// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemPendingLoans tests should load the details component 1`] = `
<Loader>
  <Error
    error={null}
  >
    <Segment>
      <Header
        as="h3"
      >
        Pending loan requests
      </Header>
      <Message
        data-test="no-results"
      >
        There are no pending loan requests for this item
      </Message>
    </Segment>
  </Error>
</Loader>
`;

exports[`ItemPendingLoans tests should render pending loans 1`] = `
<ItemPendingLoans
  currentSortBy=""
  currentSortOrder=""
  data={
    Array [
      Object {
        "end_date": "2018-01-01T11:05:00.000+01:00",
        "loan_pid": "loan1",
        "patron_pid": "patron_1",
        "start_date": "2018-01-01T11:05:00.000+01:00",
        "updated": "2018-01-01T11:05:00.000+01:00",
      },
      Object {
        "end_date": "2018-01-01T11:05:00.000+01:00",
        "loan_pid": "loan2",
        "patron_pid": "patron_2",
        "start_date": "2018-01-01T11:05:00.000+01:00",
        "updated": "2018-01-01T11:05:00.000+01:00",
      },
    ]
  }
  fetchPendingLoans={[Function]}
  history={[Function]}
  item={
    Object {
      "metadata": Object {
        "document_pid": 111,
        "item_pid": 222,
      },
    }
  }
  pendingLoansChangeSortBy={[Function]}
  pendingLoansChangeSortOrder={[Function]}
  showMaxPendingLoans={5}
>
  <Loader>
    <Error
      error={null}
    >
      <Segment>
        <div
          className="ui segment"
        >
          <Header
            as="h3"
          >
            <h3
              className="ui header"
            >
              Pending loan requests
            </h3>
          </Header>
          <Table
            as="table"
            className="item-pending-loans"
            selectable={true}
            singleLine={true}
          >
            <table
              className="ui selectable single line table item-pending-loans"
            >
              <TableHeader
                as="thead"
                className="header"
              >
                <thead
                  className="header"
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="header"
                  >
                    <tr
                      className=""
                      data-test="header"
                    >
                      <TableHeaderCell
                        as="th"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          />
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        textAlign="center"
                      >
                        <TableCell
                          as="th"
                          className=""
                          textAlign="center"
                        >
                          <th
                            className="center aligned"
                          >
                            Loan
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        textAlign="center"
                      >
                        <TableCell
                          as="th"
                          className=""
                          textAlign="center"
                        >
                          <th
                            className="center aligned"
                          >
                            Patron
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            <span>
                              Request created
                            </span>
                            <Popup
                              content="Sort by request date asc/desc"
                              keepInViewPort={true}
                              on="hover"
                              position="top center"
                              size="mini"
                              trigger={
                                <Icon
                                  as="i"
                                  link={true}
                                  name="sort"
                                  onClick={[Function]}
                                />
                              }
                            >
                              <Portal
                                closeOnDocumentClick={true}
                                closeOnEscape={true}
                                closeOnTriggerMouseLeave={true}
                                eventPool="default"
                                mouseEnterDelay={50}
                                mouseLeaveDelay={70}
                                onClose={[Function]}
                                onMount={[Function]}
                                onOpen={[Function]}
                                onUnmount={[Function]}
                                openOnTriggerClick={true}
                                openOnTriggerMouseEnter={true}
                                trigger={
                                  <Icon
                                    as="i"
                                    link={true}
                                    name="sort"
                                    onClick={[Function]}
                                  />
                                }
                                triggerRef={[Function]}
                              >
                                <Ref
                                  innerRef={[Function]}
                                  key="trigger"
                                >
                                  <Icon
                                    as="i"
                                    link={true}
                                    name="sort"
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="sort link icon"
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseEnter={[Function]}
                                      onMouseLeave={[Function]}
                                    />
                                  </Icon>
                                </Ref>
                              </Portal>
                            </Popup>
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            <span>
                              Period of interest
                            </span>
                            <Popup
                              content="Sort by period of interest asc/desc"
                              keepInViewPort={true}
                              on="hover"
                              position="top center"
                              size="mini"
                              trigger={
                                <Icon
                                  as="i"
                                  link={true}
                                  name="sort"
                                  onClick={[Function]}
                                />
                              }
                            >
                              <Portal
                                closeOnDocumentClick={true}
                                closeOnEscape={true}
                                closeOnTriggerMouseLeave={true}
                                eventPool="default"
                                mouseEnterDelay={50}
                                mouseLeaveDelay={70}
                                onClose={[Function]}
                                onMount={[Function]}
                                onOpen={[Function]}
                                onUnmount={[Function]}
                                openOnTriggerClick={true}
                                openOnTriggerMouseEnter={true}
                                trigger={
                                  <Icon
                                    as="i"
                                    link={true}
                                    name="sort"
                                    onClick={[Function]}
                                  />
                                }
                                triggerRef={[Function]}
                              >
                                <Ref
                                  innerRef={[Function]}
                                  key="trigger"
                                >
                                  <Icon
                                    as="i"
                                    link={true}
                                    name="sort"
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="sort link icon"
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseEnter={[Function]}
                                      onMouseLeave={[Function]}
                                    />
                                  </Icon>
                                </Ref>
                              </Portal>
                            </Popup>
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                    </tr>
                  </TableRow>
                </thead>
              </TableHeader>
              <TableBody
                as="tbody"
              >
                <tbody
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="loan1"
                    key="loan1"
                  >
                    <tr
                      className=""
                      data-test="loan1"
                    >
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          <Icon
                            as="i"
                            circular={true}
                            link={true}
                            name="eye"
                            onClick={[Function]}
                          >
                            <i
                              aria-hidden="true"
                              className="eye circular link icon"
                              onClick={[Function]}
                            />
                          </Icon>
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          loan1
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          patron_1
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          1/1/2018
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                      >
                        <td
                          className=""
                        >
                          1/1/2018 - 1/1/2018
                        </td>
                      </TableCell>
                    </tr>
                  </TableRow>
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="loan2"
                    key="loan2"
                  >
                    <tr
                      className=""
                      data-test="loan2"
                    >
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          <Icon
                            as="i"
                            circular={true}
                            link={true}
                            name="eye"
                            onClick={[Function]}
                          >
                            <i
                              aria-hidden="true"
                              className="eye circular link icon"
                              onClick={[Function]}
                            />
                          </Icon>
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          loan2
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          patron_2
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          1/1/2018
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                      >
                        <td
                          className=""
                        >
                          1/1/2018 - 1/1/2018
                        </td>
                      </TableCell>
                    </tr>
                  </TableRow>
                </tbody>
              </TableBody>
            </table>
          </Table>
        </div>
      </Segment>
    </Error>
  </Loader>
</ItemPendingLoans>
`;

exports[`ItemPendingLoans tests should render show a message with no pending loans 1`] = `
<ItemPendingLoans
  currentSortBy=""
  currentSortOrder=""
  data={Array []}
  fetchPendingLoans={[Function]}
  history={[Function]}
  item={
    Object {
      "metadata": Object {
        "document_pid": 111,
        "item_pid": 222,
      },
    }
  }
  pendingLoansChangeSortBy={[Function]}
  pendingLoansChangeSortOrder={[Function]}
  showMaxPendingLoans={5}
>
  <Loader>
    <Error
      error={null}
    >
      <Segment>
        <div
          className="ui segment"
        >
          <Header
            as="h3"
          >
            <h3
              className="ui header"
            >
              Pending loan requests
            </h3>
          </Header>
          <Message
            data-test="no-results"
          >
            <div
              className="ui message"
              data-test="no-results"
            >
              There are no pending loan requests for this item
            </div>
          </Message>
        </div>
      </Segment>
    </Error>
  </Loader>
</ItemPendingLoans>
`;

exports[`ItemPendingLoans tests should render the show all button when showing only a few pending loans 1`] = `
<ItemPendingLoans
  currentSortBy=""
  currentSortOrder=""
  data={
    Array [
      Object {
        "end_date": "2018-01-01T11:05:00.000+01:00",
        "loan_pid": "loan1",
        "patron_pid": "patron_1",
        "start_date": "2018-01-01T11:05:00.000+01:00",
        "updated": "2018-01-01T11:05:00.000+01:00",
      },
      Object {
        "end_date": "2018-01-01T11:05:00.000+01:00",
        "loan_pid": "loan2",
        "patron_pid": "patron_2",
        "start_date": "2018-01-01T11:05:00.000+01:00",
        "updated": "2018-01-01T11:05:00.000+01:00",
      },
    ]
  }
  fetchPendingLoans={[Function]}
  history={[Function]}
  item={
    Object {
      "metadata": Object {
        "document_pid": 111,
        "item_pid": 222,
      },
    }
  }
  pendingLoansChangeSortBy={[Function]}
  pendingLoansChangeSortOrder={[Function]}
  showMaxPendingLoans={1}
>
  <Loader>
    <Error
      error={null}
    >
      <Segment>
        <div
          className="ui segment"
        >
          <Header
            as="h3"
          >
            <h3
              className="ui header"
            >
              Pending loan requests
            </h3>
          </Header>
          <Table
            as="table"
            className="item-pending-loans"
            selectable={true}
            singleLine={true}
          >
            <table
              className="ui selectable single line table item-pending-loans"
            >
              <TableHeader
                as="thead"
                className="header"
              >
                <thead
                  className="header"
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="header"
                  >
                    <tr
                      className=""
                      data-test="header"
                    >
                      <TableHeaderCell
                        as="th"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          />
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        textAlign="center"
                      >
                        <TableCell
                          as="th"
                          className=""
                          textAlign="center"
                        >
                          <th
                            className="center aligned"
                          >
                            Loan
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        textAlign="center"
                      >
                        <TableCell
                          as="th"
                          className=""
                          textAlign="center"
                        >
                          <th
                            className="center aligned"
                          >
                            Patron
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            <span>
                              Request created
                            </span>
                            <Popup
                              content="Sort by request date asc/desc"
                              keepInViewPort={true}
                              on="hover"
                              position="top center"
                              size="mini"
                              trigger={
                                <Icon
                                  as="i"
                                  link={true}
                                  name="sort"
                                  onClick={[Function]}
                                />
                              }
                            >
                              <Portal
                                closeOnDocumentClick={true}
                                closeOnEscape={true}
                                closeOnTriggerMouseLeave={true}
                                eventPool="default"
                                mouseEnterDelay={50}
                                mouseLeaveDelay={70}
                                onClose={[Function]}
                                onMount={[Function]}
                                onOpen={[Function]}
                                onUnmount={[Function]}
                                openOnTriggerClick={true}
                                openOnTriggerMouseEnter={true}
                                trigger={
                                  <Icon
                                    as="i"
                                    link={true}
                                    name="sort"
                                    onClick={[Function]}
                                  />
                                }
                                triggerRef={[Function]}
                              >
                                <Ref
                                  innerRef={[Function]}
                                  key="trigger"
                                >
                                  <Icon
                                    as="i"
                                    link={true}
                                    name="sort"
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="sort link icon"
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseEnter={[Function]}
                                      onMouseLeave={[Function]}
                                    />
                                  </Icon>
                                </Ref>
                              </Portal>
                            </Popup>
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            <span>
                              Period of interest
                            </span>
                            <Popup
                              content="Sort by period of interest asc/desc"
                              keepInViewPort={true}
                              on="hover"
                              position="top center"
                              size="mini"
                              trigger={
                                <Icon
                                  as="i"
                                  link={true}
                                  name="sort"
                                  onClick={[Function]}
                                />
                              }
                            >
                              <Portal
                                closeOnDocumentClick={true}
                                closeOnEscape={true}
                                closeOnTriggerMouseLeave={true}
                                eventPool="default"
                                mouseEnterDelay={50}
                                mouseLeaveDelay={70}
                                onClose={[Function]}
                                onMount={[Function]}
                                onOpen={[Function]}
                                onUnmount={[Function]}
                                openOnTriggerClick={true}
                                openOnTriggerMouseEnter={true}
                                trigger={
                                  <Icon
                                    as="i"
                                    link={true}
                                    name="sort"
                                    onClick={[Function]}
                                  />
                                }
                                triggerRef={[Function]}
                              >
                                <Ref
                                  innerRef={[Function]}
                                  key="trigger"
                                >
                                  <Icon
                                    as="i"
                                    link={true}
                                    name="sort"
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="sort link icon"
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseEnter={[Function]}
                                      onMouseLeave={[Function]}
                                    />
                                  </Icon>
                                </Ref>
                              </Portal>
                            </Popup>
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                    </tr>
                  </TableRow>
                </thead>
              </TableHeader>
              <TableBody
                as="tbody"
              >
                <tbody
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="loan1"
                    key="loan1"
                  >
                    <tr
                      className=""
                      data-test="loan1"
                    >
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          <Icon
                            as="i"
                            circular={true}
                            link={true}
                            name="eye"
                            onClick={[Function]}
                          >
                            <i
                              aria-hidden="true"
                              className="eye circular link icon"
                              onClick={[Function]}
                            />
                          </Icon>
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          loan1
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          patron_1
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        collapsing={true}
                        textAlign="center"
                      >
                        <td
                          className="collapsing center aligned"
                        >
                          1/1/2018
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                      >
                        <td
                          className=""
                        >
                          1/1/2018 - 1/1/2018
                        </td>
                      </TableCell>
                    </tr>
                  </TableRow>
                </tbody>
              </TableBody>
              <TableFooter
                as="tfoot"
                className="footer"
                data-test="footer"
                fullWidth={true}
              >
                <TableHeader
                  as="tfoot"
                  className="footer"
                  data-test="footer"
                  fullWidth={true}
                >
                  <tfoot
                    className="full-width footer"
                    data-test="footer"
                  >
                    <TableRow
                      as="tr"
                      cellAs="td"
                    >
                      <tr
                        className=""
                      >
                        <TableHeaderCell
                          as="th"
                          colSpan="4"
                        >
                          <TableCell
                            as="th"
                            className=""
                            colSpan="4"
                          >
                            <th
                              className=""
                              colSpan="4"
                            />
                          </TableCell>
                        </TableHeaderCell>
                        <TableHeaderCell
                          as="th"
                          textAlign="right"
                        >
                          <TableCell
                            as="th"
                            className=""
                            textAlign="right"
                          >
                            <th
                              className="right aligned"
                            >
                              <span>
                                Showing first 
                                1
                                 pending requests
                              </span>
                              <Button
                                as="button"
                                onClick={[Function]}
                                role="button"
                                size="small"
                              >
                                <button
                                  className="ui small button"
                                  onClick={[Function]}
                                  role="button"
                                >
                                  Show all
                                </button>
                              </Button>
                            </th>
                          </TableCell>
                        </TableHeaderCell>
                      </tr>
                    </TableRow>
                  </tfoot>
                </TableHeader>
              </TableFooter>
            </table>
          </Table>
        </div>
      </Segment>
    </Error>
  </Loader>
</ItemPendingLoans>
`;
